--- a/src/components/Modal/modal.scss
+++ b/src/components/Modal/modal.scss
@@ -69,4 +69,7 @@
     animation: pulse 2s infinite;
     font-weight: bold;
     margin: 45px auto 0 auto;
+    padding: 5px 14px;
+    border-radius: 5px;
+    background: linear-gradient(90deg, #FF2D04 0%, #C13216 100%);
 }
