--- a/src/pages/LogIn/login.scss
+++ b/src/pages/LogIn/login.scss
@@ -50,7 +50,8 @@
     width: 20px;
 }
 
-.form-content input {
+.form-content input,
+.form-content select {
     width: 379px;
     height: 60px;
     border-radius: 30px;
