Exibição de tarefas no board

--- a/src/components/Tabs/tabs.scss
+++ b/src/components/Tabs/tabs.scss
@@ -20,6 +20,11 @@
     cursor: pointer;
 }
 
+.tab:hover {
+    transform: translateY(-3px);
+    box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.4);
+}
+
 .active {
     width: 290px;
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.4);
